Build complete Perfuma full-stack e-commerce flow.
Implement the required frontend shopping experience, configure backend static image hosting and seed data URLs, and align runtime setup so the app runs end-to-end with local images, cart, modal, and product APIs.

Made-with: Cursor